WIP fix alignment of select

--- a/src/css/text_editor.less
+++ b/src/css/text_editor.less
@@ -16,8 +16,11 @@
   }
 
   // TODO(Louis): Fix the line-height issue in the ember-select for btn-sm
-  .insert-non-editable-btn .btn-sm {
-    margin-top: -1px;
+  .insert-non-editable-btn,
+  .ember-text-editor-font-family-select {
+    .btn-sm {
+      margin-top: -1px;
+    }
   }
 }
 
